# laravel/src/home-monitor/app/Http/Requests/StoreDeviceRequest.php
@@ -29,7 +29,7 @@ class StoreDeviceRequest extends FormRequest
             'name' => ['required', 'string', 'min:3', 'max:255'],
             'serial_number' => ['required', 'string', 'min:1', 'max:100', 'unique:devices,serial_number'],
             'mpan' => ['nullable', 'string', 'max:100', 'unique:devices,mpan'],
-            'location' => ['nullable', 'string', 'max:255'],
+            'location_id' => ['nullable', 'integer', 'exists:pgsql.locations,id'],
             'description' => ['nullable', 'string', 'max:2000'],
             'is_active' => ['required', 'boolean'],
         ];
